--- a/bot-whatsapp/package.json
+++ b/bot-whatsapp/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "@whiskeysockets/baileys": "^6.6.0",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "dotenv": "^16.4.7",
     "pino": "^8.19.0",
     "qrcode-terminal": "^0.12.0"
